--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "react-pdf": "^7.7.1",
+    "react-pdf-viewer": "^0.1.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
