--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@react-pdf/renderer": "^3.3.8",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-pdf": "^7.7.1",
     "react-pdf-viewer": "^0.1.0",
     "react-select": "^5.8.0"
